Fix flex box on firefox

--- a/styles/workspace/workspace.less
+++ b/styles/workspace/workspace.less
@@ -22,12 +22,14 @@
 
 #container {
   display: -webkit-flex;
+  display: flex;
   position: absolute;
   top: 41px;
   right: 0;
   bottom: 0;
   left: 0;
   -webkit-box-orient: horizontal;
+  box-orient: horizontal;
   overflow: hidden;
 }
 
